--- a/src/SidebarLayout.css
+++ b/src/SidebarLayout.css
@@ -9,7 +9,7 @@ body {
   background-repeat: no-repeat;
 }
 
-.sidebar {
+/* .sidebar {
   width: 300px;
   background-image: url(./images/slide1/sliderback.png);
   background-position: center;
@@ -26,7 +26,7 @@ body {
     margin 0.4s ease;
   transform: translateX(0);
   opacity: 1;
-}
+} */
 
 .sidebar-top {
   display: flex;
@@ -85,13 +85,31 @@ body {
 .active-tab-title {
   color: #01db60;
 }
-.sidebar.collapsed {
-  transform: translateX(-120%);
-  opacity: 0;
-  width: 0;
-  margin: 0;
-  padding: 0;
+.sidebar {
+  width: 300px;
+  background-image: url(./images/slide1/sliderback.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 15px;
+  border-radius: 30px;
+  flex-shrink: 0;
+  height: 95vh;
+  overflow-y: auto;
+  position: relative;
+  transition: transform 0.6s ease, opacity 0.6s ease;
+  transform-origin: left top; /* 👈 open hone ka origin */
+  transform: scale(1);
+  opacity: 1;
 }
+
+.sidebar.collapsed {
+  transform-origin: left top; /* 👈 close hone ka origin */
+  transform: scale(0);
+  opacity: 0;
+}
+
+/* Collapsed header */
 .collapsed-header {
   position: absolute;
   top: 20px;
@@ -101,27 +119,30 @@ body {
   padding: 10px 20px !important;
   z-index: 10;
   height: 55px;
+  width: 15%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   animation: slideInFromLeft 0.4s ease forwards;
-  width: 15%;
 }
-.collapsed-header .toggle-icon {
-  font-size: 20px;
-  transition: transform 0.3s ease;
-  position: absolute;
-  top: 20px;
-  right: 30px;
-}
+
 @keyframes slideInFromLeft {
   0% {
-    transform: translateX(-100%);
+    transform: translateX(00%);
     opacity: 0;
   }
   100% {
     transform: translateX(0);
     opacity: 1;
   }
+}
+
+.collapsed-header .toggle-btn {
+  font-size: 20px;
+  transition: transform 0.3s ease;
+  position: absolute;
+  top: -30px;
+  right: 0px;
 }
 
 .content-area {
